docs/css/banners.css
/* General Non-Collapsible Banner Settings */
.banner {
  background-color: #eaf9f0;
  border: 1px solid #3333331a;
  padding: 4px 20px;
  border-radius: 5px;
  font-family: Lato; 
  color: #505050;
  display: flex; 
  justify-content: flex-start;
  align-items: flex-start; /* Aligns emoji with the first line of text */
}
.banner .emoji {
  font-size: 1.5rem; 
  margin-right: 10px;
  color: #14b955;
}
.banner .text {
  font-size: 1rem;
  font-weight: bold;
}

/* General Collapsible Banner Settings */
/* collapsible content */
.notification-collapsible-content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s ease-out;
  background-color: #fff;
  border: 1px solid #3333331a;
  border-top: none;
  padding: 0 20px;
  border-radius: 0 0 5px 5px;
}
.collapsible-content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s ease-out;
  background-color: #fff;
  border: 1px solid #3333331a;
  border-top: none;
  padding: 0 20px;
  border-radius: 0 0 5px 5px;
}
.collapsible-content.open {
  max-height: none;
}
.collapsible-content ul {
  margin-top: 1rem;
  padding-left: 1.5rem;
  line-height: 1.6;
}
.collapsible-content li {
  margin-bottom: 0.3rem;
}
.collapsible-content ul ul {
  margin-top: 0.5rem;
}
.collapsible-content ul ul li {
  margin-bottom: 0.3rem;
}
.collapsible-content li b {
  color: #0077cc;
}

/* arrow */
.arrow {
  font-size: 1.8rem;
  transition: transform 0.3s ease;
  display: inline-block;
  transform-origin: center;
  color: #505050;
}
.arrow.rotate {
  transform: rotate(90deg);
}

/* text */
.text {
  font-size: 1rem; 
  font-weight: bold; 
}

/* Individual Collapsible Banner Settings */
/* Red Collapsible RDU Alert Banner */
.alert-banner {
  display: flex;
  align-items: center;
  justify-content: space-between; /* Align text and icon/button at the ends */
  background-color: #be074d3d; 
  border: 1px solid #3333331a;
  padding: 4px 20px;
  border-radius: 5px;
  font-family: Lato; 
  color: #505050;
  cursor: pointer;
}
.alert-banner .emoji {
  font-size: 1.5rem; 
  margin-right: 10px;
  color: red;
}

/* Yellow Collapsible Warning Banner */
.warning-banner {
  display: flex;
  align-items: center;
  justify-content: space-between; 
  background-color: rgba(255, 251, 0, 0.705);
  border: 1px solid #3333331a;
  padding: 4px 20px;
  border-radius: 5px;
  font-family: Lato; 
  color: #505050;
  cursor: pointer;
}
.warning-banner .emoji {
  font-size: 1.5rem; 
  margin-right: 10px;
  color: rgb(232, 151, 1);
}

/* Green Collapsible Notification Banner */
.notification-banner {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #eaf9f0;
  border: 1px solid #3333331a;
  padding: 4px 20px;
  border-radius: 5px;
  font-family: Lato; 
  color: #505050;
  cursor: pointer; 
}
.notification-banner .emoji {
  font-size: 1.2rem; 
  margin-right: 10px;
  color: #24AE70;
}
.notification-collapsible-content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s ease-out;
  background-color: #fff;
  border: 1px solid #3333331a;
  border-top: none;
  padding: 0 20px;
  border-radius: 0 0 5px 5px;
}
.notification-collapsible-content.open {
  max-height: none;
}
.notification-arrow {
  font-size: 1.8rem;
  transition: transform 0.3s ease;
  display: inline-block;
  transform-origin: center;
  color: #505050;
}
.notification-arrow.rotate {
  transform: rotate(90deg);
}
.notification-collapsible-content ul {
  margin-top: 1rem;
  padding-left: 1.5rem;
  line-height: 1.6;
}
.notification-collapsible-content li {
  margin-bottom: 0.3rem;
}
.notification-collapsible-content ul ul {
  margin-top: 0.5rem;
}
.notification-collapsible-content ul ul li {
  margin-bottom: 0.3rem;
}
.notification-collapsible-content li b {
  color: #0077cc;
}


/* References Banner - UNDER CONSTRUCTION */
.references-banner {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 4px 20px;
  border-radius: 5px;
  font-family: Lato; 
  color: #505050;
  cursor: pointer; 
}
.references-collapsible-content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s ease-out;
  border-top: none;
  padding: 0 20px;
  border-radius: 0 0 5px 5px;
}
.references-collapsible-content.open {
  max-height: none;
}
.references-text {
  font-size: 1.5rem; 
  font-weight: bold; 
}
.references-arrow {
  font-size: 1.8rem;
  transition: transform 0.3s ease;
  display: inline-block;
  transform-origin: center;
  color: #505050;
}
.references-arrow.rotate {
  transform: rotate(90deg);
}

